<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@android:drawable/ic_lock_idle_low_battery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_Bmi"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_Aboutus"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_aboutus" />
    </group>
</menu>