<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.anurag.losequarantinefat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tips"
        android:name="com.anurag.losequarantinefat.ui.tips.TipsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_tips" />

    <fragment
        android:id="@+id/nav_Bmi"
        android:name="com.anurag.losequarantinefat.ui.bmi.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_bmi" />
    <fragment
        android:id="@+id/nav_Aboutus"
        android:name="com.anurag.losequarantinefat.ui.aboutus.AboutFragment"
        android:label="About Us"
        tools:layout="@layout/fragment_about"/>
</navigation>