<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".ui.aboutus.AboutFragment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_gravity="center"
                    android:id="@+id/anuragdp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ak" />
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="25dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:gravity="center_horizontal"
                    android:text="Anurag Kanakapalli"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="25dp"
                    android:gravity="center_horizontal"
                    android:text="@string/passage2"
                    android:textColor="@color/black"/>
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                        android:id="@+id/linkedinButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                    android:layout_marginLeft="35dp"
                        android:src="@drawable/linkedin" />

                    <ImageView
                        android:id="@+id/instagramButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/ig" />

                    <ImageView
                        android:id="@+id/UserButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="35dp"
                        android:layout_weight="1"
                        android:src="@drawable/user" />
            </LinearLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_gravity="center"

                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/anand" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="25dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:gravity="center_horizontal"
                    android:text="Ravi anand"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="25dp"
                    android:gravity="center_horizontal"
                    android:text="@string/ravi_anand_veludandi_about"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/anandIN"
                        android:layout_width="50dp"
                        android:layout_marginLeft="35dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/linkedin" />

                    <ImageView
                        android:id="@+id/anand_IG"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/ig" />

                    <ImageView
                        android:id="@+id/anand_U"
                        android:layout_width="50dp"
                        android:layout_marginRight="35dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/youtube" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ruth" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="25dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/m_ruth_evangeline"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="25dp"
                    android:gravity="center_horizontal"
                    android:text="@string/ruthmatter"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_marginBottom="100dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/ruth_IN"
                        android:layout_marginLeft="35dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/ruth_IG"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/ig" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>